# ustwallet

./: .gitignore  Anchor.toml  Cargo.toml  DATABASE-SETUP.md  DEVNET-TESTING.md  README.md  custody-keypair.json  package-lock.json  package.json  tsconfig.json
.cursor/plans/: ust-wallet-growth-ui-notify_2e864a90.plan.md
.cursor/rules/: post-run-debug-check.mdc
.cursor/skills/browser-auth-workflow/: SKILL.md
app/: next.config.ts  package-lock.json  package.json  vercel.json
app/prisma/: schema.prisma
app/scripts/: count-tokens.mjs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/admin/distribute-rewards/: route.ts
app/src/app/api/admin/process-unlocks/: route.ts
app/src/app/api/notifications/hourly/: route.ts
app/src/app/api/referral/[wallet]/: route.ts
app/src/app/api/referral/claim/: route.ts
app/src/app/api/stake/: route.ts
app/src/app/api/stake-sol/: route.ts
app/src/app/api/stake/[wallet]/: route.ts
app/src/app/api/stake/min/: route.ts
app/src/app/api/stake/restake/: route.ts
app/src/app/api/subscribe/: route.ts
app/src/app/api/unsubscribe/: route.ts
app/src/app/unsubscribe/: page.tsx
app/src/components/: CustomWalletModal.tsx  EmailSubscribe.tsx  StakingDashboard.tsx  WalletProvider.tsx  icons.tsx
app/src/lib/: constants.ts  custody.ts  email.ts  price.ts  raydiumSwap.ts  solana.ts  stakingClient.ts
app/src/lib/idl/: ust_staking.json
programs/ust_staking/: Cargo.toml
programs/ust_staking/src/: lib.rs
scripts/: create-test-token.ts  devnet-faucet-test.ts
tests/: ust_staking.ts
(+3 files in other folders)
