[package]
name = "ust-staking"
version = "0.1.0"
description = "UST Wallet 90-day tiered staking program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ust_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
